ortelius-istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ortelius
spec:
  hosts:
  - "*"
  gateways:
  - ortelius-gateway
  http:
  - match:
    - uri:
        prefix: /sergio
    rewrite:
      uri: /dmadminweb/
    route:
    - destination:
        host: ortelius-app-ortelius-chart
        port:
          number: 80
